--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@ www.saosu.blogspot.com</font></a></div>
 <li><p style="font-family: KT3; font-size: large;">
 ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [KT3] 
 ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/KT3/KT3.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Cherry Unicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Cherry Unicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/CherryUnicode/CherryUnicode.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: KhunPaOh; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [KhunPaOh] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/KhunPaOh/KhunPaOh.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: MM Phetkon; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [MM Phetkon] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MMPhetkon/MMPhetkon.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Myanmar Ethnic; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Ethnic] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarEthnic/MyanmarEthnic.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Myanmar KatKuu; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar KatKuu] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarKatKuu/MyanmarKatKuu.ttf" target="_blank">Download Font</a>]</p></li>
 <li><p style="font-family: Pyidaungsu; font-size: large;">
 ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Pyidaungsu] 
 ၸၼ်လူတ်ႇလူင်း [<a href="https://mmwebfonts.comquas.com/fonts/Pyidaungsu-2.1_Regular.ttf" target="_blank">Download Font</a>]</p></li>
@@ -86,9 +101,60 @@ www.saosu.blogspot.com</font></a></div>
 <li><p style="font-family: Myanmar Yinmar; font-size: large;">
 ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Yinmar] 
 ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarYinmar/MyanmarYinmar.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Myanmar Square; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Square] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarSquare/MyanmarSquare.ttf" target="_blank">Download Font</a>]</p></li>
 <li><p style="font-family: Myanmar Square Light; font-size: large;">
 ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Square Light] 
 ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarSquareLight/MyanmarSquareLight.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: Myanmar Sanpya; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Sanpya] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarSanpya/MyanmarSanpya.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Myanmar Sabae; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Sabae] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarSabae/MyanmarSabae.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Myanmar Punk; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Punk] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarPunk/MyanmarPunk.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Myanmar Ponenyet; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Ponenyet] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarPonenyet/MyanmarPonenyet.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Myanmar Pixel; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Pixel] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarPixel/MyanmarPixel.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Myanmar Pixel Smooth; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Pixel Smooth] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarPixelSmooth/MyanmarPixelSmooth.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Myanmar Phetsot; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Phetsot] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarPhetsot/MyanmarPhetsot.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Myanmar Pauklay; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Pauklay] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarPauklay/MyanmarPauklay.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Myanmar Njaun; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Njaun] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarNjaun/MyanmarNjaun.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Myanmar Nayone; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Nayone] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarNayone/MyanmarNayone.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Myanmar Kuttar; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Kuttar] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarKuttar/MyanmarKuttar.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Myanmar Head One; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Head One] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarHeadOne/MyanmarHeadOne.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: MM Jasmine; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [MM Jasmine] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MMJasmine/MMJasmine.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Jasmine Unicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Jasmine Unicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/JasmineUnicode/JasmineUnicode.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: MM Bagan; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [MM Bagan] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MMBagan/MMBagan.ttf" target="_blank">Download Font</a>]</p></li>
+  <li><p style="font-family: Hopone; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Hopone] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/Hopone/Hopone.ttf" target="_blank">Download Font</a>]</p></li>
 </ol>
 <p style="font-family: KT2"><i><strong>မၢႆတွင်း ... </strong></i>ၾွၼ်ႉဢၼ်လႂ်ပႆႇမီးလႄႈ သင်ဝႃႈၶႂ်ႈသႂ်ႇထႅင်ႈၼႆ သူင်ႇမႃးပၼ်လႆႈယူႇ တေဢဝ်သႂ်ႇပၼ်ၼႂ်းသဵၼ်ႈမၢႆၼႆႉ။</p>
 <p style="font-family: KT2"><i><strong>ၶေႃႈယွမ်းၼွမ်း ... </strong></i>ယွမ်းၼွမ်းလႄႈ ယွၼ်းတၢင်းၶႂၢင်ႉထိုင် ၸိူဝ်းၽူႈၶူင်ၾွၼ်ႉယူႇၼီႇၶူတ်ႉႁဝ်းၶဝ်တင်းသဵင်ႈယူႇဢေႃႈ ယွၼ်ႉဝႃႈ ၾွၼ်ႉယူႇၼီႇၶူတ်ႉမၢင်ဢၼ် ဢမ်ႇႁူႉၸိုဝ်ႈၽူႈၶူင်သၢင်ႈမၼ်းလႄႈ ၸင်ႇဝႃႈ ဢမ်ႇလႆႈသႂ်ႇပႃးၽူႈၶူင်သၢင်ႈမၼ်းၶႃႈ။</p>
