--- a/tai.html
+++ b/tai.html
@@ -202,7 +202,7 @@
         <span style="background-color:#fff" class="icon-bar"></span>
         <span style="background-color:#fff" class="icon-bar"></span>                        
       </button>
-       <a style="margin-top:-10px" class="navbar-brand" href="/"><img src="https://4.bp.blogspot.com/-j53JvC6v-qk/WdMHjV6tkkI/AAAAAAAAA84/S6jjAjjsIBsMNxZ4TxWnfCG4n9qBtqHsACK4BGAYYCw/s1600/%25E1%2580%2599%25E1%2581%25A2%25E1%2580%259D%25E1%2580%25BA%25E1%2582%2587%25E1%2581%25BC%25E1%2580%25AF%25E1%2580%2599%25E1%2580%25BA%25E1%2582%2587.png" style="width:auto;height:40px;"></a>
+       <a style="margin-top:-10px" class="navbar-brand" href="/font/tai"><img src="https://4.bp.blogspot.com/-j53JvC6v-qk/WdMHjV6tkkI/AAAAAAAAA84/S6jjAjjsIBsMNxZ4TxWnfCG4n9qBtqHsACK4BGAYYCw/s1600/%25E1%2580%2599%25E1%2581%25A2%25E1%2580%259D%25E1%2580%25BA%25E1%2582%2587%25E1%2581%25BC%25E1%2580%25AF%25E1%2580%2599%25E1%2580%25BA%25E1%2582%2587.png" style="width:auto;height:40px;"></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
